--- a/Website/templates/hallazgo.html
+++ b/Website/templates/hallazgo.html
@@ -30,7 +30,7 @@
         <br>
         <h2>Bibliografía</h2>
         <hr>
-        <p>X</p>
+        <p>{{ datos.get("biblio") }}</p>
     </div>
     </div>
     <h2>Muestra de monedas</h2>
