--- a/Website/templates/tesoro.html
+++ b/Website/templates/tesoro.html
@@ -33,7 +33,7 @@
         <br>
         <h2>Bibliografía</h2>
         <hr>
-        <p>X</p>
+        <p>{{ datos.get("biblio") }}</p>
     </div>
     </div>
     <h2>Muestra de monedas</h2>
