--- a/website/templates/inicio.html
+++ b/website/templates/inicio.html
@@ -4,10 +4,10 @@
     <div class="grid grid-cols-2 m-5">
         <div>
             <a href="/moneda/{{ id_moneda }}">
-                <img class="mx-auto w-1/2" src="{{ imagen }}" alt="../static/logo-sinletras-sinfondo.jpg"/>
+                <img class="mx-auto w-1/2" src="{{ imagen }}" alt="../static/logo-sinletras-sinfondo.jpg" id="img-moneda"/>
             </a>
             <a href="/moneda/{{ id_moneda }}" class="h-min">
-                <p class="text-center text-3xl">{{ moneda }}</p>
+                <p class="text-center text-3xl" id="texto-moneda">{{ moneda }}</p>
             </a>
         </div>
             <div class="bg-wondercoins  bg-contain bg-no-repeat bg-center">
