--- a/website/templates/tipo.html
+++ b/website/templates/tipo.html
@@ -66,12 +66,12 @@
     <h2>URI:</h2>
     <hr>
     {% if tipo.get("uri")|length > 1 %}
-    <a target="_blank" href="{{ tipo.get("uri")[1].strip() }}"><h2>{{ tipo.get("uri")[1].strip() }}</h2></a>
+    <a target="_blank" href="{{ tipo.get("uri")[1].strip() }}"><h2>{{ tipo.get("uri")[1].strip() }}</h2></a><i></i>
     {% endif %}
-    <h1 class="text-2xl pt-10">Monedas:</h1>
+    <h1 class="text-2xl pt-10 my-2">Monedas:</h1>
     <div class="grid grid-cols-3 gap-x-5 gap-y-0 h-1/2">
         {% for i in tipo.get("monedas") %}
-            <div class="card card-compact w-auto bg-base-100 shadow-xl">
+            <div class="card card-compact w-auto bg-base-100 shadow-xl" id="moneda-{{ i.get("section_id") }}">
                 <figure class="h-1/2">
                     <img class="h-full" src="{{ i.get("image_obverse") }}"
                          alt="/../static/logo-sinletras-sinfondo.jpg"/>
@@ -81,7 +81,8 @@
                 <div class="card-body">
                     <h2 class="card-title">{{ i.get("section_id") }} - {{ i.get("mint")[0] }}
                         - {{ i.get("catalogue_type_mint")[0] }}</h2>
-                    <a target="_blank" href="/moneda/{{ i.get("section_id") }}"><p class="text-xl">Más información</p></a>
+                    <a target="_blank" href="/moneda/{{ i.get("section_id") }}" id="link-moneda-{{ i.get("section_id") }}">
+                        <p class="text-xl font-bold">Más información</p></a>
                 </div>
             </div>
         {% endfor %}
