--- a/website/templates/moneda.html
+++ b/website/templates/moneda.html
@@ -36,7 +36,7 @@
                 <h2>URI</h2>
                 <hr>
                 <p>{{ moneda.get("uri") }}</p>
-                <a target="_blank" href="{{ moneda.get("uri") }}">Haga clic aquí</a>
+                <a target="_blank" href="{{ moneda.get("uri") }}" rel="noopener">Haga clic aquí</a>
             </div>
             <div>
                 <h2>Lugar del Hallazgo</h2>
