--- a/website/templates/tipo.html
+++ b/website/templates/tipo.html
@@ -66,7 +66,7 @@
     <h2>URI:</h2>
     <hr>
     {% if tipo.get("uri")|length > 1 %}
-    <a target="_blank" href="{{ tipo.get("uri")[1].strip() }}"><h2>{{ tipo.get("uri")[1].strip() }}</h2></a><i></i>
+    <a target="_blank" href="{{ tipo.get("uri")[1].strip() }}" rel="noopener"><h2>{{ tipo.get("uri")[1].strip() }}</h2></a><i></i>
     {% endif %}
     <h1 class="text-2xl pt-10 my-2">Monedas:</h1>
     <div class="grid grid-cols-3 gap-x-5 gap-y-0 h-1/2">
